--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="row">
       <div class="col-12">
         <div class="cabecalho">
-          <h1 class="title">Lista de lugares para treinar</h1>
-          <p class="description">Objetivo: Criar uma lista de lugares onde se pode treinar tênis de mesa.</p>
+          <h1 class="title">Tênis de Mesa</h1>
+          <h3 class="subtitle">Lista de lugares para treinar</h3>
         </div>
         <div class="lista">
           <ul>
